<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".Activity.SearchActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18dp"
                android:text="@string/measurement_units" />

            <RadioGroup
                android:id="@+id/measureUnits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/metric_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/metric" />
                <Space
                    android:layout_width="15dp"
                    android:layout_height="match_parent"/>

                <RadioButton
                    android:id="@+id/imperial_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/imperial" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/languages"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/eng_set"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:text="English" />
                    <Space
                        android:layout_width="15dp"
                        android:layout_height="match_parent"/>

                    <RadioButton
                        android:id="@+id/cnTr_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:text="中文（繁體）" />

                    <Space
                        android:layout_width="12dp"
                        android:layout_height="match_parent"/>

                    <RadioButton
                        android:id="@+id/cnSimp_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:text="中文（简体）" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/main_menu"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:itemTextAppearance="@style/NavigationViewTitleStyle"/>

</androidx.drawerlayout.widget.DrawerLayout>