<?xml version="1.0" encoding="utf-8"?>


<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SearchActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />


        <LinearLayout
            android:id="@+id/addressContainer"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Singapore"
                android:textSize="24dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/updated_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:scaleType="fitCenter"
                    android:text="2 April 2024, 00:15 AM"
                    android:textSize="14dp"
                    tools:ignore="TextSizeCheck" />

                <ImageButton
                    android:id="@+id/refresh_button"
                    android:layout_width="19dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/cardview_default_elevation"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/refresh_icon" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="13dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/overviewContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.162">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Clear Sky"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/result_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:text="29°C"
                    android:textSize="90dp" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/min_temp" />

                        <TextView
                            android:id="@+id/minTemp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="ahh??"/>

                        <Space
                            android:layout_width="50dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/max_temp" />

                        <TextView
                            android:id="@+id/maxTemp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="ahh??"/>

                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_below="@id/overviewContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout android:id="@+id/detailsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentBottom="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3">


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#3CF1EBF1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@drawable/sunset_icon" />

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="5dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sunrise"
                                android:textSize="12dp" />

                            <TextView
                                android:id="@+id/sunrise_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="wah"
                                android:textSize="14dp" />
                        </LinearLayout>

                        <Space
                            android:layout_width="10dp"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#3CF1EBF1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@drawable/sunset_icon" />

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="5dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sunset"
                                android:textSize="12dp" />

                            <TextView
                                android:id="@+id/sunset_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="wah"
                                android:textSize="14dp" />
                        </LinearLayout>

                        <Space
                            android:layout_width="10dp"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#3CF1EBF1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@drawable/wind_icon" />

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="5dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/wind"
                                android:textSize="12dp" />

                            <TextView
                                android:id="@+id/wind_speed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="wah"
                                android:textSize="14dp" />
                        </LinearLayout>
                    </LinearLayout>

                    <Space android:layout_width="wrap_content"
                        android:layout_height="10dp"/>

                    <LinearLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3">
                        <LinearLayout android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="8dp"
                            android:background="#3CF1EBF1">

                            <ImageView android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@drawable/pressure_icon" />
                            <Space android:layout_width="wrap_content"
                                android:layout_height="5dp"/>
                            <TextView android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12dp"
                                android:text="@string/pressure"/>

                            <TextView android:id="@+id/pressure_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14dp"
                                android:text="wah"/>
                        </LinearLayout>

                        <Space android:layout_width="10dp" android:layout_height="wrap_content"/>

                        <LinearLayout android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="8dp"
                            android:background="#3CF1EBF1">
                            <ImageView android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@drawable/humidity_icon" />

                            <Space android:layout_width="wrap_content"
                                android:layout_height="5dp"/>

                            <TextView android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12dp"
                                android:text="@string/humidity"/>

                            <TextView android:id="@+id/humidity_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14dp"
                                android:text="wah"/>
                        </LinearLayout>

                        <Space android:layout_width="10dp"
                            android:layout_height="wrap_content"/>

                        <LinearLayout
                            android:id="@+id/aboutUs"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#3CF1EBF1"
                            android:gravity="center"
                            android:onClick="showAlertDialog"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@drawable/info_icon" />

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="5dp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/about"
                                android:textAlignment="center"
                                android:textSize="12dp" />

                            <TextView
                                android:id="@+id/about"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/us"
                                android:textAlignment="center"
                                android:textSize="12dp" />
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:text="@string/weather_forecast" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/forecast"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>

    </LinearLayout>
    </ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/main_menu"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:itemTextAppearance="@style/NavigationViewTitleStyle">

    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>